# docs/swagger.yaml
@@ -21,6 +21,8 @@ definitions:
         type: integer
       id:
         type: integer
+      product:
+        $ref: '#/definitions/domain.Product'
       product_id:
         type: integer
       quantity:
@@ -267,27 +269,6 @@ paths:
       tags:
       - Product
   /api/v1/auth/user/cart:
-    delete:
-      consumes:
-      - application/json
-      description: Delete Cart
-      operationId: delete-Cart
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: cart deleted
-          schema:
-            type: string
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/v1.errorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete Cart
-      tags:
-      - Cart
     get:
       consumes:
       - application/json
@@ -309,37 +290,7 @@ paths:
       summary: Get Cart
       tags:
       - Cart
-    post:
-      consumes:
-      - application/json
-      description: create cart
-      operationId: create-cart
-      parameters:
-      - description: cart info
-        in: body
-        name: input
-        required: true
-        schema:
-          items:
-            $ref: '#/definitions/models.CartItem'
-          type: array
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: integer
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/v1.errorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Create cart
-      tags:
-      - Cart
-  /api/v1/auth/user/cart/addproduct:
+  /api/v1/auth/user/cart/product:
     post:
       consumes:
       - application/json
@@ -368,39 +319,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Add Product to cart
-      tags:
-      - Cart
-  /api/v1/auth/user/cart/deleteproduct/{productId}/{qty}:
-    post:
-      consumes:
-      - application/json
-      description: Delete Product to cart
-      operationId: delete-product
-      parameters:
-      - description: Product ID
-        in: path
-        name: productId
-        required: true
-        type: integer
-      - description: quantity to be removed from the cart
-        in: path
-        name: qty
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/domain.Cart'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/v1.errorResponse'
-      security:
-      - ApiKeyAuth: []
-      summary: Delete Product to cart
       tags:
       - Cart
   /api/v1/sign-in:
